# PhoenixSoftware

./: .gitignore  README.md
radio_comms/: README.md  plsworkvideo.py  simplevid.py
radio_comms/hieroglyphics/: .gitignore  .master_process_base.py.swp  .master_process_rover.py.swp  MessageQueue.py  baseStationComms.py  baseStationMessageProcessor.py  concurrentSet.py  config.py  imageCapturer.py  master_process_base.py  master_process_rover.py  master_process_rover.py~  message.py  messageProcessor.py  messagePurpose.py  messageQueue.py  readPort.py  readerWriter.py  roverComms.py  roverMessageProcessor.py  scheduler.py  serialReaderWriter.py  socketReaderWriter.py  userInterface.py
radio_comms/info_over_bullets_files/: base_station_video.py  capture_controls.py  capture_controlsv2.py  joystick.py  markers_rover_video.py  markers_rover_video.py~  master_base_station_24.py  recv_controls.py  rover_video.py  send_controls.py  send_joystick.py  sketch.ino  test_joystick.py
ws/src/motor_package/: package.xml  setup.py
ws/src/motor_package/motor_package/: jetsonTalker.py  joystickTalker.py
ws/src/moveit_control_test/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/moveit_control_test/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  phoenix.ros2_control.xacro  phoenix.srdf  phoenix.urdf.xacro  phoenix.xacro  ros2_controllers.yaml
ws/src/moveit_control_test/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws/src/simple_arm_phoenix/: CMakeLists.txt  package.xml  simple_arm_phoenix.xml
ws/src/simple_arm_phoenix/bringup/config/: initial_positions.yaml  simple_arm_phoenix_controller.yaml
ws/src/simple_arm_phoenix/bringup/launch/: simple_arm_phoenix.launch.py
ws/src/simple_arm_phoenix/description/ros2_control/: simple_arm_phoenix.ros2_control.xacro
ws/src/simple_arm_phoenix/description/urdf/: phoenix.xacro  phoenix_actuator.xacro  phoenix_properties.xacro
ws/src/simple_arm_phoenix/hardware/: simple_arm_phoenix_hardware.cpp
ws/src/simple_arm_phoenix/hardware/include/simple_arm_phoenix/: simple_arm_phoenix_hardware.hpp
(+3 files in other folders)
